Improve Page Error

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -9,6 +9,12 @@ a {
   color: #00B7FF;
 }
 
+.Error-main {
+  width: 500px;
+  text-align: center;
+  margin: 0 auto;
+}
+
 .TweetList {
   width: 300px;
   margin: 0 auto;
